--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
     "node": "10"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1",
     "mongoose": "^5.9.23"
